# LexiEng

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
LICENSES/: Inter-OFL.txt
crates/lexieng-core/: Cargo.toml
crates/lexieng-core/src/: lib.rs
crates/lexijap-core/: Cargo.toml
crates/lexijap-core/src/: lib.rs
docs/: JITEN_PARITY.md
scripts/: build.mjs  package.mjs  verify-dictionary.mjs
src/: background.ts  content.ts  dictionary-worker.ts  manifest.json  options.ts  sidepanel.ts  wasm-bindgen.d.ts  widget.ts
src/content/: page-parser.ts  popup-controller.ts  reader-view.ts  status-bar.ts
src/pages/: options.html  sidepanel.html  widget.html
src/shared/: anki.ts  db.ts  renderer.ts  settings.ts  types.ts  util.ts
src/styles/: base.css  content.css  options.css  popup.css  sidepanel.css  status-bar.css  widget.css
tests/: anki.test.ts  frequency.test.ts  settings.test.ts
tests/fixtures/: reader-harness.html  widget-harness.html
