[package]
name = "lexieng-core"
version = "0.2.0"
description = "Fast text tokenization and Yomitan archive parsing for LexiEng"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "=0.3.82"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
unicode-normalization = "0.1.24"
wasm-bindgen = "=0.2.105"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
